Add metrics query API contract (#415)
* Add metrics query API contract

* Use schema metrics types for query docs

* Remove connector Swagger override
